--- a/web/portal/css/tvcultura/sites/fpa.css
+++ b/web/portal/css/tvcultura/sites/fpa.css
@@ -96,6 +96,33 @@ body{background: url(/portal/images/capaPrograma/sic/pattern-fundo.jpg);margin:0
 .col-direita a.conheca div:last-child{background-color: #ffb027;height: 15px;}
 /* /QUEMSOMOS */
 
+/* LICITACOES */
+.licitacoes .col-esquerda i{
+  filter: alpha(opacity=70);/* IE 5-7 */
+   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";  /* IE 8 */
+   -moz-opacity: 0.7;/* Netscape */
+   -khtml-opacity: 0.7;/* Safari 1.x */
+   opacity: 0.7; /* Navegadores Modernos*/ 
+}
+.container.licitacoes,
+.container.licitacoes-subsecoes{margin-top:30px;}
+.licitacoes .col-esquerda a{margin: 3px 0 5px 0; color: #626262; text-transform: uppercase; background: #f8f8f8; width: 100%; float: left; font-weight: normal; padding: 6px;border-radius:5px;}
+.licitacoes .col-esquerda a:hover{color:#000; background: #f1f1f1;}
+.licitacoes-subsecoes .col-esquerda p {margin-bottom: 6px;}
+.licitacoes-subsecoes .col-esquerda .item{background: #f8f8f8;margin: -5px 0 20px 0;padding: 5px 8px 5px 8px;border-radius: 8px;}
+.licitacoes-subsecoes .col-esquerda a{color:#2a578c; text-decoration:underline;}
+.licitacoes-subsecoes .col-esquerda a.voltar{color: #333;text-decoration: none;font-size: 13px;text-transform:none}
+.licitacoes-subsecoes .pagination{clear: both;}
+.licitacoes-subsecoes .pagination ul>li>span{border:none; background:none;margin: 19px 0 0 0; font-size: 13px; font-weight: bold; text-transform: uppercase; color: #ccc;}
+.licitacoes-subsecoes .pagination ul>li>a{ border:none;background:none;text-decoration:none; color: #333;}
+.licitacoes-subsecoes .pagination ul>li>a:hover{color:#2a578c; text-decoration: underline;}
+.licitacoes-subsecoes .pagination ul>li>a>i{margin:12px;}
+.licitacoes-subsecoes .pagination ul>li>span>i{margin:12px;filter: alpha(opacity=30); -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";-moz-opacity: 0.3; -khtml-opacity: 0.3; opacity: 0.3;}
+.licitacoes-subsecoes .pagination .active{color:#2a578c;text-decoration:underline;}
+.licitacoes-subsecoes .pagination .prev{border-right:1px solid #000;border-radius:0;}
+.licitacoes-subsecoes .pagination .next{border-left:1px solid #000;border-radius:0;}
+/* /LICITACOES */
+
 /* TRABALHE-CONOSCO */
 .col-esquerda .accordion-group,
 .accordion-inner{border:none;}
