--- a/web/portal/css/tvcultura/sites/metropolis.css
+++ b/web/portal/css/tvcultura/sites/metropolis.css
@@ -2071,4 +2071,20 @@ address, caption, cite, code, dfn, em, strong, th, var, optgroup {
 .box-listao ul .video { width:20px; margin:0; }
 .noticiaTxt p a:hover,
 .noticiaTxt p a { color:#ff6633; font-weight:bold;  }
+
+.menu-interna { float: right;}
+.menu-interna li { background: url("/portal/images/capaPrograma/metropolis/bg-menuRV.png") repeat-x scroll 0 0 transparent; border-radius: 6px 6px 6px 6px; float: left; height: 24px; text-decoration: none;}
+.menu-interna li a { color: #5B5A50;   float: left;    font-size: 12px;    font-weight: bold; }
+.submenu-interna li,
+.menu-interna .submenu-interna ul,
+.menu-interna .submenu-interna,
+.menu-interna li:hover, 
+.menu-interna li.ativo,
+.menu-interna li a:hover, 
+.menu-interna li a.ativo {    background: url("/portal/images/capaPrograma/metropolis/bg-menuRVOver.png") repeat scroll 0 0 transparent !important;}
+.menu-interna .submenu-interna li a,
+.menu-interna li a:hover a, 
+.menu-interna li a.ativo a { color:#fff; } 
+.menu-interna .submenu-interna { overflow:hidden; padding: 0; right:0; } 
+.menu-interna .submenu-interna ul { padding:5px;}  
 /** /METROPOLIS **/
