--- a/web/portal/css/tvcultura/sites/provocacoes.css
+++ b/web/portal/css/tvcultura/sites/provocacoes.css
@@ -2190,7 +2190,7 @@ body.branco { background:#fff url(/portal/images/capaPrograma/provocacoes/bg-bra
 
 .menu-interna { float: right;}
 .menu-interna li { background: url("/portal/images/capaPrograma/provocacoes/bg-menuRV.png") repeat-x scroll 0 0 transparent; border-radius: 6px 6px 6px 6px; float: left; height: 24px; text-decoration: none;}
-.menu-interna li a { color: #5B5A50;   float: left;    font-size: 12px;    font-weight: bold; }
+.menu-interna li a { color: #5B5A50;   float: left;    font-size: 12px;    font-weight: bold; height:24px; line-height: 24px; }
 .submenu-interna li,
 .menu-interna .submenu-interna ul,
 .menu-interna .submenu-interna,
