--- a/web/portal/css/tvcultura/sites/culturafm.css
+++ b/web/portal/css/tvcultura/sites/culturafm.css
@@ -501,3 +501,4 @@ h3.tit-pagina { margin-bottom:0; }
 #rodape-portal { position:relative; }
 
 /** /RADIO FM  **/
+em{font-style:oblique !important;}
