--- a/web/portal/css/tvcultura/sites/cocorico/geral.css
+++ b/web/portal/css/tvcultura/sites/cocorico/geral.css
@@ -410,7 +410,7 @@ bold,
 .box-destaque.tvcocorico a,
 .box-destaque.tvcocorico {  background:#1DB186;  }
 .box-destaque.tvcocorico h3 a { background:#1DB186; color:#FDF035; }
-.box-destaque.tvcocorico a { background:#BFD540; color:#FFF; }
+.box-destaque.tvcocorico a { background:#BFD540; color:#757b33; }
 .box-destaque.tvcocorico .ico-mais {  background: url("/portal/images/capaPrograma/cocorico/mais.png") no-repeat -73px 0 transparent; }
 
 /* IE*/
