--- a/web/portal/css/tvcultura/sites/fpa.css
+++ b/web/portal/css/tvcultura/sites/fpa.css
@@ -98,7 +98,7 @@ body{background: url(/portal/images/capaPrograma/sic/pattern-fundo.jpg);margin:0
 /* /QUEMSOMOS */
 
 /* LICITACOES */
-.licitacoes .col-esquerda i{
+.col-esquerda i{
   filter: alpha(opacity=70);/* IE 5-7 */
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";  /* IE 8 */
    -moz-opacity: 0.7;/* Netscape */
