--- a/web/portal/css/tvcultura/sites/fpa.css
+++ b/web/portal/css/tvcultura/sites/fpa.css
@@ -33,10 +33,10 @@ body{background: url(/portal/images/capaPrograma/sic/pattern-fundo.jpg);margin:0
 .tooltip-inner { background:#1863b7 !important; color:#fff;}
 .tooltip.in,
 .tooltip {opacity: 1; filter: alpha(opacity=100); -moz-opacity:1;}
-.tooltip.bottom .tooltip-arrow,
-.tooltip.left .tooltip-arrow,
-.tooltip.top .tooltip-arrow,
-.tooltip.right .tooltip-arrow {border-bottom-color: #1863b7 !important;}
+.tooltip.bottom .tooltip-arrow{border-bottom-color: #1863b7 !important;}
+.tooltip.left .tooltip-arrow{border-left-color: #1863b7 !important;}
+.tooltip.top .tooltip-arrow{border-top-color: #1863b7 !important;}
+.tooltip.right .tooltip-arrow {border-right-color: #1863b7 !important;}
 
 /* /ESTRUTURAS BÁSICAS*/
 
