--- a/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
+++ b/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
@@ -35,7 +35,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
 .hero-unit .menu-jc a:hover { text-decoration:none; }
 .hero-unit .menu-jc .como { background:#fff; padding:0 5px;}
 .hero-unit .menu-jc .como:hover { background:#666; color:#fff; }
-.hero-unit .menu-jc span { margin:-6px 10px 0 10px; float:left; color:#c4c4c4; font-size: 18px; margin-top:-2px; }
+.hero-unit .menu-jc span { margin:-6px 10px 0 10px; float:left; color:#c4c4c4; font-size: 18px; }
 .hero-unit .menu-jc .numero { background:#666; color:#ccff33; padding:0 5px; margin:0; font-size:14px; }
 .hero-unit .menu-jc .seta { border:5px solid transparent;  border-left-color: #666; width: 0; height:0; margin:0; padding:0; display:block; float:left; margin-top:5px; }
 
@@ -66,11 +66,19 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
 .redes .gplus {  display: block; float:left; }
 .accordion-inner .redes { margin-top:10px; clear:both; float:left; }
 .accordion-inner .redes .fb { margin-top:0; }
-/*.accordion-inner iframe { float:left; margin-right:10px; }*/
 .accordion-inner { padding:8px 0;}
 .accordion-inner .redes,
 .accordion-inner p,
 .accordion-inner img { padding:0 15px;} 
+.accordion-inner #mais h3 { background:#333; color:#fff; padding:2px 5px; font-size:14px; height:18px; line-height:18px; float: left; text-transform:uppercase; margin:0 15px 10px 15px; font-weight:normal;}   
+.accordion-inner #mais ul { clear:both; margin-left:20px; } 
+.accordion-inner #mais li { list-style:none;} 
+.accordion-inner #mais li i { margin-right:5px;} 
+.accordion-inner #mais li a { text-decoration:none;}
+.accordion-inner #mais li a:hover { text-decoration:underline ;} 
+.accordion-heading .loader { float:right; margin-top:2px; } 
+
+
 
 /* ie */
 .hero-unit .col-dir { width/*\**/:37%\9; }
@@ -91,9 +99,6 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
   .hero-unit .menu-jc span { margin-top:-6px;} 
 }
 
-/*@media only screen 
-and (min-width : 768px) 
-and (max-width : 1024px)*/
 @media screen and (max-width: 1024px){
   .hero-unit .col-dir { max-width: 18%; }
   .hero-unit .col-esq { max-width:60%; margin-left:0; }
@@ -109,56 +114,9 @@ and (max-width : 1024px)*/
   .hero-unit .col-dir .seta { display:block; }
   .hero-unit .menu-jc a.online { padding-right:10%; }
 }
-/*
-@media screen and (max-width: 768px){
-  .hero-unit .bgtopo { display:none; }
-  body { background-color:#a4050d; }
-  .conteudo { background:#fff; overflow:hidden; }
-  .accordion-inner iframe { width:100%; height:auto; }
-  .hero-unit { padding:2%; }
-  .hero-unit .col-esq { min-width:100%; margin-left:0; }
-  .hero-unit .col-dir { min-width:100%; clear:both;}
-  .hero-unit {  height:auto;}
-  .hero-unit .col-esq p { text-align:center; }
-  .hero-unit .col-esq h1 { margin:2% auto; }
-  .hero-unit .menu-jc { margin-top:5px; width:100%;}
-  .hero-unit .col-dir a.fechar { display:none; }
-  .hero-unit .col-dir span { display:block; }
-  .hero-unit .col-esq p { margin-top:5px;}
-  .hero-unit .col-esq h1 { margin:0 auto;}  
-  .hero-unit .redes { margin-top:-6px;} 
-  .accordion-inner iframe { margin-left:0; height:390px;} 
-}
-*/
-/*
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : portrait){
-  .hero-unit .col-dir { max-width: 18%; }
-  .hero-unit .col-esq { max-width:60%; margin-left:0; }
-  .hero-unit .col-dir span { display:none; }
-  .hero-unit .col-dir .numero,
-  .hero-unit .col-dir .seta { display:block; }
-  .hero-unit .menu-jc { margin-top:20px; }
-  .hero-unit .menu-jc .como { margin-bottom:10px; }
-  .hero-unit .menu-jc a { font-size:12px; }
-  .hero-unit .menu-jc a.online { padding-right:10%; }
-  .conteudo .span8 { width:100% }
-  .conteudo .span4 { width:100%; margin-left:0; }
-  .accordion-inner iframe { margin-left:6%;} 
-}
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : landscape) { 
-  .hero-unit .col-dir { max-width: 36%; }
-}
-*/
+
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-width : 320px) 
-and (max-width : 480px)  {
+@media (max-width : 768px)  {
   .hero-unit .bgtopo { display:none; }
   body { background-color:#a4050d; }
   .conteudo { background:#fff; overflow:hidden; }
@@ -170,13 +128,11 @@ and (max-width : 480px)  {
   .hero-unit .col-esq p { text-align:center; }
   .hero-unit .col-esq h1 { margin:2% auto; }
   .hero-unit .redes { min-width:350px; margin:0 auto; }
-  .redes .twt {  clear:both;}
-  .hero-unit .menu-jc { margin-top:5px; }
+  .hero-unit .menu-jc { margin-top:5px; float:left; }
   .hero-unit .col-dir span { display:none; }
   .hero-unit .col-dir .numero,
   .hero-unit .col-dir .seta { display:block; }
   .hero-unit .col-dir a { display:block; float: left; }
   .hero-unit .col-dir .online [ margin-top:5px; clear:both; }
-  .hero-unit .col-dir .fechar { float:right; }
+  .hero-unit .col-dir .fechar { float:right;  }
 }
-/* /media screen*/
