--- a/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
+++ b/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
@@ -38,7 +38,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
 .hero-unit .menu-jc span { margin:-6px 10px 0 10px; float:left; color:#c4c4c4; font-size: 18px; }
 .hero-unit .menu-jc .numero { background:#666; color:#ccff33; padding:0 5px; margin:0; font-size:14px; }
 .hero-unit .menu-jc .seta { border:5px solid transparent;  border-left-color: #666; width: 0; height:0; margin:0; padding:0; display:block; float:left; margin-top:5px; }
-
+.hero-unit .menu-jc .offline { color:#ce0002;}
 .conteudo h2 { font-size:22px; line-height:24px; margin:20px 0 5px 0; color:#666; text-transform:uppercase; }
 .accordion-heading .accordion-toggle { background:#666; color:#fff; text-transform:uppercase; font-weight:bold; padding:4px 20px; border:1px dotted #fff; font-size:16px; text-decoration:none; }
 .accordion-heading .accordion-toggle:hover,
@@ -121,9 +121,9 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
   body { background-color:#a4050d; }
   .conteudo { background:#fff; overflow:hidden; }
   .accordion-inner iframe { width:100%; height:auto; }
-  .hero-unit { padding:2%; }
-  .hero-unit .col-esq { min-width:100%; margin-left:0; }
-  .hero-unit .col-dir { min-width:100%; clear:both; float:left; }
+  .hero-unit { padding:1%; }
+  .hero-unit .col-esq { width:50%; margin-left:0; }
+  .hero-unit .col-dir { min-width:50%; float:left; }
   .hero-unit {  height:auto;}
   .hero-unit .col-esq p { text-align:center; }
   .hero-unit .col-esq h1 { margin:2% auto; }
@@ -132,7 +132,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
   .hero-unit .col-dir span { display:none; }
   .hero-unit .col-dir .numero,
   .hero-unit .col-dir .seta { display:block; }
-  .hero-unit .col-dir a { display:block; float: left; }
+  .hero-unit .col-dir a { display:block; float:right; }
   .hero-unit .col-dir .online [ margin-top:5px; clear:both; }
-  .hero-unit .col-dir .fechar { float:right;  }
+  .hero-unit .col-dir a { float:right !important;  }
 }
