--- a/web/portal/univesptv/css/cursos.css
+++ b/web/portal/univesptv/css/cursos.css
@@ -224,3 +224,4 @@ select { background:#f3f3f3; border-color:#c5c5c5; border-radius:0; }
 
 #cursos .thumbnails > li { margin-right:50px\9; }
 #menu-portal-2 h1 { margin:0; }
+#menu-portal-2 .busca-portal .ipt-txt { padding-left:0; }
