--- a/web/portal/css/tvcultura/sites/cocorico/tvcocorico.css
+++ b/web/portal/css/tvcultura/sites/cocorico/tvcocorico.css
@@ -77,13 +77,13 @@
 .interatividade .form-campos .radio { color:#fff; margin-bottom:0; }
 .interatividade .form-campos .radio input { margin-top:0; }
 .interatividade .form-campos .last .span9 { margin-bottom:5px; float:left; }
-.interatividade .form-campos{color:#333;}
+.interatividade input {color:#333!important;}
 .interatividade input.error::-webkit-input-placeholder,
 .interatividade textarea.error::-webkit-input-placeholder,
 .interatividade input.error:-moz-placeholder,
-.interatividade textarea.error:-moz-placeholder,
-.interatividade input.error::-moz-placeholder,
-.interatividade textarea.error::-moz-placeholder,
+.interatividade textarea.error:-moz-input-placeholder,
+.interatividade input.error::-moz-input-placeholder,
+.interatividade textarea.error::-moz-input-placeholder,
 .interatividade input.error:-ms-input-placeholder,
 .interatividade textarea.error:-ms-input-placeholder{color: #FFF!important;}
 
