--- a/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
+++ b/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
@@ -106,9 +106,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
   .conteudo .span8 { width:100% }
   .conteudo .span4 { width:100%; margin-left:0; }
   .accordion-inner iframe { width: 100%; height:620px;} 
-  .hero-unit .col-dir span { display:none; }
-  .hero-unit .col-dir .numero,
-  .hero-unit .col-dir .seta { display:block; }
+  .hero-unit .col-dir span.barra { display:none; }
   .hero-unit .menu-jc a.online { padding-right:10%; }
 }
 
@@ -126,18 +124,22 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
   .hero-unit .col-esq h1 { margin:2% auto; }
   .hero-unit .redes { min-width:350px; margin:0 auto; }
   .hero-unit .menu-jc { margin-top:5px; float:right; }
-  .hero-unit .col-dir span { display:none; }
-  .hero-unit .col-dir .numero,
-  .hero-unit .col-dir .seta { display:block; }
+  .hero-unit .col-dir span.barra { display:none; }
   .hero-unit .col-dir a { display:block;  }
   .hero-unit .col-dir .online { margin-top:5px; }
 }
 
 /* Smartphones (portrait and landscape) ----------- */
 @media (max-width : 480px)  {
-  .hero-unit .col-esq p { margin:4px 0 0; }
+  .hero-unit .col-dir,
+  .hero-unit .col-esq { max-width: 100%; width:100%;}  
+  .hero-unit .col-dir .fechar { display:none; }
+  .hero-unit .col-esq p { margin:4px 0 0; text-align:left; }
   .hero-unit .col-esq h1 { margin:2% auto; background:url("/portal/images/capaPrograma/segundatela/jornaldacultura/logo-jc-small.png") no-repeat scroll 0 0 transparent }
-  .hero-unit .col-dir a { float:right; }
+  .hero-unit .col-dir span.barra { display:none;}
+  .hero-unit .menu-jc { float:left; margin-left:1%; }
+  .hero-unit .menu-jc .offline,
+  .hero-unit .menu-jc a.online { clear:both; }
 }
 
 .accordion-body ul { margin:0; padding:15px;}
@@ -153,3 +155,4 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
 .accordion-heading { margin-bottom:0; } 
 .accordion-body p { margin:10px 0 0 0; }
 .logo-link img { padding:0 0 15px 0; }
+
