--- a/web/portal/css/tvcultura/sites/provocacoes.css
+++ b/web/portal/css/tvcultura/sites/provocacoes.css
@@ -2188,7 +2188,7 @@ body.branco { background:#fff url(/portal/images/capaPrograma/provocacoes/bg-bra
 .ui-icon.ui-icon-circle-triangle-e { background-position:-11px 0; }
 .ui-datepicker .ui-datepicker-prev span, .ui-datepicker .ui-datepicker-next span { margin-top:-5px; }
 
-.menu-interna { float: right;}
+.menu-interna { float: right!important;}
 .menu-interna li { background: url("/portal/images/capaPrograma/provocacoes/bg-menuRV.png") repeat-x scroll 0 0 transparent; border-radius: 6px 6px 6px 6px; float: left; height: 24px; text-decoration: none;}
 .menu-interna li a { color: #5B5A50;   float: left;    font-size: 12px;    font-weight: bold; height:24px; line-height: 24px; }
 .submenu-interna li,
